--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.7",
+    "debug": "^4.3.3",
     "express": "^4.17.2",
-    "joi": "^13.7.0"
+    "helmet": "^5.0.2",
+    "joi": "^13.7.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
   }
 }
